--- a/data/config.json
+++ b/data/config.json
@@ -2,12 +2,11 @@
   "site": {
     "name": "C.H.A.M.P.",
     "timezone": "America/New_York",
-<<<<<<< Updated upstream
     "basePathHint": "/champ-site-project-chitin"
-
-=======
-    "basePathHint": ""
->>>>>>> Stashed changes
+  },
+  "repo": {
+    "owner": "BasidiomyCody",
+    "name": "champ-site-project-chitin"
   },
   "data": {
     "news": {
