--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,10 +15,17 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
+          cache: "npm"
 
-      - name: Install (no deps, but keeps npm happy)
-        run: npm install --no-fund --no-audit
+      - name: Install
+        run: npm ci
+
+      - name: Validate content
+        run: npm run validate:content
+
+      - name: Build generated data
+        run: npm run build:data
 
       - name: Validate repo + generated data
         run: npm run check
